--- a/TODOApp/TODO.WebApi/appsettings.Development.json
+++ b/TODOApp/TODO.WebApi/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "DefaultConnetion": "server=localhost,1433;Database=TODOAppCF_DB;User Id=sa;Password=Abc.123456;TrustServerCertificate=true;"
   }
 }
