--- a/TODOApp/TODO.WebApi/appsettings.json
+++ b/TODOApp/TODO.WebApi/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnetion": "server=todoappsqlserver,1433;Database=TODOAppCF_DB;User Id=sa;Password=Abc.123456;TrustServerCertificate=true;"
+  }
 }
+ 
